--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,14 @@
 {
     "require": {
-        "symfony/validator": "^6.0"
-    }
+        "symfony/validator": "^6.0",
+        "symfony/routing": "^6.0",
+        "symfony/http-foundation": "^6.0",
+        "symfony/yaml": "^6.0",
+        "symfony/config": "^6.0"
+    },
+    "autoload": {
+        "psr-4": {
+          "App\\": "src/"
+        }
+      }
 }
